# simple-cli-jira-pr-tool

./: .cursorrules  .env.template  .mise.template.toml  Cargo.toml  README.md  mise.toml
.opencode/skill/atlassian-api-guidelines/: SKILL.md  bitbucket-endpoints.md  jira-endpoints.md
memory-bank/: activeContext.md  api.mdc  progress.md  projectbrief.md  protection.md  symbols.md  systemPatterns.md  techContext.md
src/: main.rs
