[package]
name = "simple-pr"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
# HTTP 클라이언트
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
# CLI 파싱 (커맨드 라인 인자 처리)
clap = { version = "4", features = ["derive"] }
# JSON 직렬화/역직렬화
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# 에러 핸들링 (Monadic Error Handling을 쉽게 해줌)
anyhow = "1.0"
# 환경변수 로딩
dotenvy = "0.15"
regex = "1.12.2"
